Fixes on mobile

--- a/css/style.css
+++ b/css/style.css
@@ -12,10 +12,6 @@ body {
 	padding: 30px;
 }
 
-.mobile-body {
-	font-size: 40px;
-}
-
 a {
   /*color: #458588;*/
 	color: #00fff9;
@@ -105,8 +101,8 @@ img {
 }
 
 .dot {
-  height: 15px;
-  width: 15px;
+  height: 0.75em;
+  width: 0.75em;
   background-color: #bbb;
   border-radius: 50%;
   display: inline-block;
@@ -145,4 +141,13 @@ img {
 	margin-top: -250px; /* Negative half of height. */
 	margin-left: -250px; /* Negative half of width. */
 	display: none;
+}
+
+@media all and (max-width: 1090px) {
+  body {
+    font-size: 40px;
+  }
+  h1 {
+    font-size: 60px;
+  }
 }
